[tool.poetry]
name = "botbot"
version = "0.1.0"
description = ""
authors = ["bijij <josh@josh-is.gay>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
# added to appease poetry
"discord.py" = {git = "https://github.com/rapptz/discord.py"}
discord-ext-alternatives = {git = "https://github.com/ext-creators/discord-ext-alternatives", branch = "discord.py@v2"}
discord-ext-menus = {git = "https://github.com/rapptz/discord-ext-menus"}
jishaku = {git = "https://github.com/Gorialis/jishaku"}
# end - added to appease poetry
discord-ext-boardgames = {git = "https://github.com/bijij/discord-ext-boardgames"}
ditto = {git = "https://github.com/bijij/ditto"}
numpy = ">=1.19.2"
psutil = ">=5.7.2"
ics = ">=0.7"
rsmarkov = ">=0.1.2"
bottomify = ">=1.1.1"
pyboy = "^1.0.0"


[tool.poetry.dev-dependencies]
black = ">=20.8b1"
pytest = ">=6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 119
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | res
)/
'''

[tool.pyright]
reportInvalidStringEscapeSequence = false
reportMissingImports = false